--- a/Server/WebContent/WEB-INF/web.xml
+++ b/Server/WebContent/WEB-INF/web.xml
@@ -33,6 +33,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
+    	<welcome-file>index.jsp</welcome-file>
         <welcome-file>redirect.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
