--- a/Server/.project
+++ b/Server/.project
@@ -34,4 +34,16 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src_common</name>
+			<type>2</type>
+			<location>D:/Program Files/android/Android_OO/common/Share/src</location>
+		</link>
+		<link>
+			<name>src_share</name>
+			<type>2</type>
+			<location>D:/Program Files/android/Android_OO/common/Share/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
