--- a/Server/.project
+++ b/Server/.project
@@ -36,9 +36,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>src_share</name>
+			<name>sharesrc</name>
 			<type>2</type>
-			<location>D:/Program Files/android/sts_server/server/Share/src</location>
+			<location>D:/Program Files/android/Android_OO/common/Share/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
